# VR-Course-Assignment

./: LICENSE  README.md
assignment-1-maze/: README.md
assignment-1-maze/Android VR/Maze-Cardboard/: build.gradle  settings.gradle
assignment-1-maze/Android VR/Maze-Cardboard/MazeGame/: CMakeLists.txt  build.gradle
assignment-1-maze/Android VR/Maze-Cardboard/MazeGame/src/main/: AndroidManifest.xml
assignment-1-maze/Android VR/Maze-Cardboard/MazeGame/src/main/assets/shaders/: containerBox.frag  containerBox.vert
assignment-1-maze/Android VR/Maze-Cardboard/MazeGame/src/main/java/com/taotianhua/cardboard/: VrActivity.java
assignment-1-maze/Android VR/Maze-Cardboard/MazeGame/src/main/jni/: Camera.cpp  Camera.h  ContainerBox.cpp  ContainerBox.h  LoadShaders.cpp  LoadShaders.h  LoadTexture.cpp  LoadTexture.h  MazeGame.cpp  MazeGame.h  Shader.h  mazeGameInterface.cpp  util.cpp  util.h
assignment-1-maze/Android VR/Maze-Cardboard/MazeGame/src/main/jni/stbi/: stb_image.h
assignment-1-maze/Android VR/Maze-Cardboard/MazeGame/src/main/res/values/: strings.xml
assignment-1-maze/Android VR/Maze-Cardboard/gradle/wrapper/: gradle-wrapper.properties
assignment-1-maze/Android/Maze-Cardboard/: .gitignore  build.gradle  settings.gradle
assignment-1-maze/Android/Maze-Cardboard/app/: CMakeLists.txt  build.gradle
assignment-1-maze/Android/Maze-Cardboard/app/src/main/: AndroidManifest.xml
assignment-1-maze/Android/Maze-Cardboard/gradle/wrapper/: gradle-wrapper.properties
assignment-1-maze/Android/MazeGame/app/: build.gradle
assignment-1-maze/Android/MazeGame/app/src/main/: AndroidManifest.xml
assignment-1-maze/Android/MazeGame/gradle/wrapper/: gradle-wrapper.properties
assignment-1-maze/Windows/OpenGL Application/: OpenGL Application.sln
assignment-1-maze/Windows/OpenGL Application/OpenGL Application/: Camera.cpp  Camera.h  ContainerBox.cpp  ContainerBox.h  OpenGL Application.vcxproj  OpenGL Application.vcxproj.filters  Shader.h  game.h  main.cpp
assignment-1-maze/Windows/OpenGL Application/OpenGL Application/shaders/: triangle.frag  triangle.vert
(+26 files in other folders)
